[package]
name = "lambda-function"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
serde = "1.0.133"
tokio = "1.15.0"
serde_derive = "1.0"

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"