[package]
name = "webscraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
serde = { version = "1.0", features = ["derive"]}
tokio = { version= "1", features = ["full"] }
serde_derive = "1.0"
reqwest = "0.11.7"
regex = "1"
scraper = "0.12.0"
serde_json = "1.0"
chrono = "0.4"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-unknown-linux-musl]
linker = "rust-lld"
